Central class for all date formatting operations